--- a/bigbluebutton-web/grails-app/conf/bigbluebutton.properties
+++ b/bigbluebutton-web/grails-app/conf/bigbluebutton.properties
@@ -82,7 +82,7 @@ numConversionThreads=2
 #----------------------------------------------------
 # Additional conversion of the presentation slides to SVG
 # to be used in the HTML5 client
-svgImagesRequired=false
+svgImagesRequired=true
 
 # Default number of digits for voice conference users joining through the PSTN.
 defaultNumDigitsForTelVoice=5
@@ -109,8 +109,8 @@ defaultGuestPolicy=ASK_MODERATOR
 #
 # native2ascii -encoding UTF8 bigbluebutton.properties bigbluebutton.properties
 #
-defaultWelcomeMessage=<br>Welcome to <b>%%CONFNAME%%</b>!<br><br>For help on using BigBlueButton see these (short) <a href="event:http://www.bigbluebutton.org/content/videos"><u>tutorial videos</u></a>.<br><br>To join the audio bridge click the phone button.  Use a headset to avoid causing background noise for others.<br>
-defaultWelcomeMessageFooter=This server is running <a href="http://docs.bigbluebutton.org/" target="_blank"><u>BigBlueButton</u></a>.
+defaultWelcomeMessage=\u6b22\u8fce\u8fdb\u5165\u6559\u5ba4
+defaultWelcomeMessageFooter=\u6167\u827a\u672f\u6559\u80b2
 
 # Default maximum number of users a meeting can have.
 # Current default is 0 (meeting doesn't have a user limit).
@@ -134,7 +134,7 @@ meetingExpireIfNoUserJoinedInMinutes=5
 
 # Number of minutes to end meeting when
 # the last user left.
-meetingExpireWhenLastUserLeftInMinutes=1
+meetingExpireWhenLastUserLeftInMinutes=5
 
 
 # Disable recording by default. 
@@ -145,10 +145,10 @@ disableRecordingDefault=false
 # Start recording when first user joins the meeting.
 # For backward compatibility with 0.81 where whole meeting
 # is recorded.  
-autoStartRecording=false
+autoStartRecording=true
 
 # Allow the user to start/stop recording.
-allowStartStopRecording=true
+allowStartStopRecording=false
 
 # Allow webcams streaming reception only to and from moderators
 webcamsOnlyForModerator=false 
@@ -159,7 +159,7 @@ muteOnStart=false
 #----------------------------------------------------
 # This URL is where the BBB client is accessible. When a user sucessfully
 # enters a name and password, she is redirected here to load the client.
-bigbluebutton.web.serverURL=http://10.130.218.160
+bigbluebutton.web.serverURL=https://bbb.kaduoxq.com
 
 
 #----------------------------------------------------
@@ -193,7 +193,7 @@ defaultConfigURL=${bigbluebutton.web.serverURL}/client/conf/config.xml
 apiVersion=2.0
 
 # Salt which is used by 3rd-party apps to authenticate api calls
-securitySalt=2ff5336294114f9ee7ff4596203f2a53
+securitySalt=be83ded47df0edad86bfce05db3a7b4e
 
 # Directory where we drop the <meeting-id-recorded>.done file
 recordStatusDir=/var/bigbluebutton/recording/status/recorded
