--- a/bigbluebutton-html5/package.json
+++ b/bigbluebutton-html5/package.json
@@ -50,7 +50,7 @@
     "probe-image-size": "~3.1.0",
     "prop-types": "^15.6.2",
     "re-resizable": "^4.8.1",
-    "react": "~16.0.0",
+    "react": "^16.0.0",
     "react-autosize-textarea": "~0.4.9",
     "react-color": "~2.14.1",
     "react-dom": "^16.0.1",
